// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsButton renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 30,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
            },
            Object {
              "color": "#007AFF",
            },
            undefined,
            undefined,
            undefined,
          ],
        ]
      }
    >
      dbf83264-0385-43a8-9cbb-ff52c1587401
    </Text>
  </View>
</View>
`;

exports[`SettingsButton renders correctly as the last item 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 30,
        },
        Object {
          "borderBottomWidth": 0,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
            },
            Object {
              "color": "#007AFF",
            },
            undefined,
            undefined,
            undefined,
          ],
        ]
      }
    >
      8923b772-b0b3-4cb9-9ec1-f08516a80dd5
    </Text>
  </View>
</View>
`;

exports[`SettingsButton renders correctly while loading 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 30,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
            },
            Object {
              "color": "#007AFF",
            },
            undefined,
            undefined,
            Object {
              "color": "#8A8A8F",
            },
          ],
        ]
      }
    >
      85361618-e8d1-4284-9f2c-928cf417c323
    </Text>
    <ActivityIndicator
      animating={true}
      color="gray"
      hidesWhenStopped={true}
      size="small"
      style={
        Array [
          Object {
            "height": 42,
            "position": "absolute",
            "right": 15,
            "top": 1,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
